--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@
 body {
     font-family: 'Noto Sans', sans-serif;
     color:rgb(255, 246, 246);
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -243,8 +243,8 @@ footer a:hover .bento::after {
 }
 
 .round-button {
-  left: 650px;
-  top: 220px;
+  left: -600px;
+  top: 300px;
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -402,6 +402,21 @@ footer p, footer a {
   margin: 0 10px;
 }
 
+.sticker {
+  margin: 0 auto;
+}
+
+.round-button {
+  width: 70px;
+  height: 70px;
+  left: 120px;
+  top: 380px;
+}
+
+.round-button img {
+  height: 105px;
+}
+
 }
 
 @media only screen and (max-width: 480px) {
@@ -438,6 +453,9 @@ footer {
 footer p, footer a {
   margin: 0 10px;
 }
+.sticker {
+  display: none;
+}
 }
 
 @media only screen and (max-width: 320px) {
@@ -450,20 +468,20 @@ footer p, footer a {
     line-height: 2.3rem;
   }
   .bio-pp {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
 }
 .containerAccueil {
-  gap: 40px;
+  gap: 20px;
 }
 .containerAccueil .bio {
     width: 90vw;
-    padding: 20px 10px;
+    padding: 10px 10px;
     text-align: center;
 }
 
 .containerAccueil .bio p {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
 }
 
 footer {
@@ -474,4 +492,8 @@ footer {
 footer p, footer a {
   margin: 0 10px;
 }
+.sticker {
+  display: none;
 }
+}
+
