--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -18,6 +18,9 @@ body {
     font-family: 'Albert Sans', sans-serif;
     color:rgb(255, 246, 246);
     background: var(--bkg);
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     height: 100%;
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -501,6 +504,111 @@ input, textarea {
 }
 
 @media only screen and (max-width: 320px) {
+
+    .allContentContact {
+        padding: 20px 0;
+        height: calc(100% - 80px - 80px);
+        margin: 0;
+    }
+
+    .perso-infos {
+        width: 280px;
+        height: 180px;
+        overflow: hidden;
+    }
+    
+    .info-tel, .info-mail, .info-lieu {
+        align-items: center;
+        gap: 0px;
+        padding: 0px 0px;
+        margin: 0;
+        height: 40px;
+    }
+    
+    .titre-info {
+       flex: 3;
+       margin: 0px;
+       font-size: 0.6rem;
+    }
+    
+    .picto {
+        flex: 0;
+        width: 40px;
+        padding: 0;
+        padding-top: 5px;
+        margin: 0;
+   }
+    
+    .info {
+        flex: 3.5;
+        text-align: end;
+        padding-right: 10px;
+        font-size: 0.75rem;
+    }
+
+    .picto svg, .picto path {
+        transform: scale(0.65);
+        padding-bottom: 0px;
+    }
+    .perso-infos .socials {
+        gap: 40px;
+        margin-right: 0px;
+        margin-top: 20px;
+    }
+
+    .perso-infos .socials img {
+        height: 25px;
+        width: 25px;
+    }
+    
+    .form-card {
+        width: 280px;
+        height: 330px;
+    }
+    
+    .form-left {
+        padding: 15px 15px;
+        width: 100%;
+    }
+    .form-left .form-titre {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .form-left h1, .form-left span {
+        margin-left: 15px;
+        font-size: 1.3rem;
+        margin-left: 10px;
+    }
+    
+    .form-right {
+        width: 0%;
+    }
+    .contact-form {
+        gap: 5px;
+        padding: 0px 10px;
+        width: 100%;
+        height: 300px;
+    }
+    textarea::placeholder, input::placeholder {
+        line-height: 30px;
+        font-size: 0.9rem;
+    }
+
+    input {
+        margin-top: 10px;
+        padding: 5px;
+    }
+    textarea {
+        min-height: 50px;
+        height: 50px;
+        width: 100%;
+    }
+    .cta {
+        padding: 10px 20px;
+        margin-top: 20px;
+        font-size: 0.8rem;
+    }
 
 }
 
