--- a/src/styles/Coding.css
+++ b/src/styles/Coding.css
@@ -29,13 +29,116 @@ body::-webkit-scrollbar {
 
 .allContentCoding {
     min-height: calc(100vh - 80px - 80px);
-    word-break: normal;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
     width: 100%;
+}
+
+.container {
+    display: flex;
+    gap: 30px;
+}
+
+.card {
+    height: 300px;
+    width: 250px;
+    background-color: white;
+    outline: 4px solid #417d8c;
+    outline-offset: -3px;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+}
+
+.card .card-header {
+    height: 200px;
+    border-radius: 5px;
+    border-bottom: 3px solid #417d8c;
+    position: relative;
+}
+
+.card .card-header img {
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card .card-header button {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 10px;
+    width: 60%;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.card .card-header .card-overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color 0.3s ease-in-out;
+}
+
+.card:hover .card-header .card-overlay {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.card .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
+    height: 100px;
+    padding: 0 6px;
+    border-radius: 5px;
+    background-color: var(--bkg);
+}
+
+.card .card-body h2 {
+    color: black;
+    font-size: 1.2rem;
+    padding: 8px 0;
+}
+
+.card .card-body p {
+    color: black;
+    font-size: 0.9rem;
+}
+
+.card .card-float {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    z-index: -1;
+    top: 200px;
+    margin-left: 10px;
+    width: 150px;
+    height: 80px;
+    color: black;
+    background-color: white;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 9px 18px -5px rgba(74,74,74,0.7); 
+    box-shadow: 0px 9px 18px -5px rgba(74,74,74,0.7);
+    transition: all 0.7s cubic-bezier(.63,0,.34,1.03);
+}
+
+.card:hover .card-float {
+    top: 290px;
+}
+
+.card .card-float .keyword-float {
+    font-weight: 600;
+    color: greenyellow;
+    text-decoration: underline;
 }
 
 .keyword {
