--- a/src/styles/Coding.css
+++ b/src/styles/Coding.css
@@ -50,7 +50,20 @@ body::-webkit-scrollbar {
     outline-offset: -3px;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
+    position: relative;
 }
+
+.card:hover .card-header::before  {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    border-radius: 5px;
+  }
 
 .card .card-header {
     height: 200px;
@@ -81,17 +94,6 @@ body::-webkit-scrollbar {
     cursor: pointer;
 }
 
-.card .card-header .card-overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0);
-    transition: background-color 0.3s ease-in-out;
-}
-
-.card:hover .card-header .card-overlay {
-    background-color: rgba(0, 0, 0, 0.4);
-}
 .card .card-body {
     display: flex;
     flex-direction: column;
@@ -164,8 +166,90 @@ body::-webkit-scrollbar {
     left: 0;
 }
 
-@media only screen and (max-width: 480px) {
-    .allContentCoding h1 {
-        font-size: 1.5rem;
+  
+  @media only screen and (max-width: 480px) {
+    .container {
+        flex-direction: column;
+        gap: 60px;
     }
-}
+    
+    .card {
+        height: 250px;
+        width: 300px;
+    }
+    
+    .card .card-header {
+        height: 150px;
+    }
+
+    .card .card-body {
+        height: 100px;
+    }
+    
+    .card .card-float {
+        justify-content: center;
+        position: absolute;
+        top: 0px;
+        width: 220px;
+        height: 40px;
+        font-size: 0.9rem;
+        margin: 0 35px;
+    }
+    
+    .card:hover .card-float {
+        top: -38px;
+    }
+  }
+  
+  @media only screen and (max-width: 320px) {
+    .container {
+        margin-top: 30px;
+        flex-direction: column;
+        gap: 50px;
+    }
+    
+    .card {
+        height: 150px;
+        width: 220px;
+    }
+    
+    .card .card-header {
+        height: 60px;
+    }
+
+    .card .card-header button {
+        padding: 10px 10px;
+        width: 60%;
+        font-size: 0.8rem;
+    }
+
+    .card .card-body {
+        height: 70px;
+    }
+
+    .card .card-body h2 {
+        color: black;
+        font-size: 1.0rem;
+        padding: 8px 0;
+    }
+    
+    .card .card-body p {
+        color: black;
+        font-size: 0.8rem;
+    }
+    
+    .card .card-float {
+        justify-content: center;
+        position: absolute;
+        top: 0px;
+        width: 220px;
+        height: 40px;
+        font-size: 0.9rem;
+        margin: 0 0px;
+    }
+    
+    .card:hover .card-float {
+        top: -38px;
+    }
+  }
+  
